# typedre

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml  static_checks.yaml
scripts/: bump_version.py
src/typedre/: __init__.py  __init__.pyi  builder.py  converterlist.py  match.py  pattern.py  pattern.pyi
tests/: assertions.py  test_builder.py  test_pattern.py  test_re.py
