[project]
name = "typedre"
version = "0.1.0"
description = ""
authors = [
    {name = "Dominic Price",email = "dominicprice@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "typedre", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^25.9.0"
isort = "^7.0.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
