[project]
name = "typedre"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
[[project.authors]]
name = "Dominic Price"
email = "dominicprice@outlook.com"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "typedre"
from = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^25.9.0"
isort = "^7.0.0"
mypy = "^1.18.2"
toml = "^0.10.2"
